starting to build meta progression

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>sunflowers-vs-shadows</title>
   </head>
   <body>
+    <div id="levelup-overlay" class="hidden">
+      <div class="overlay-content">
+        <h1 class="glow-text">LEVEL UP !</h1>
+        <p>Select an upgrade to upgrade your sunflower:</p>
+        <div id="upgrade-cards-container"></div>
+        <button id="skip-upgrade">Skip</button>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
