feat : Meta progression

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>sunflowers-vs-shadows</title>
   </head>
   <body>
+    <div id="main-menu">
+      <button id="meadow-zone" class="zone-button">
+        Meadow <span id="win-counter-meadow" class="win-counter"></span>
+      </button>
+      <button id="construction-zone" class="zone-button" disabled>
+        Soon available ...
+      </button>
+    </div>
     <div id="levelup-overlay" class="hidden">
       <div class="overlay-content">
         <h1 class="glow-text">LEVEL UP !</h1>
